--- a/oriplot.ipynb
+++ b/oriplot.ipynb
@@ -63,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###plot potential energy\n",
     "data=np.loadtxt(dir+\"pot.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
