--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -284,7 +284,8 @@
     "z=dataf[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
-    "\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('Frequency (a.u.)')\n",
     "\n",
     "plt.subplot(3,3,4)\n",
     "#plt.grid(False)\n",
@@ -313,7 +314,8 @@
     "z=dataf[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
-    "\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('Frequency (a.u.)')\n",
     "plt.subplot(3,3,7)\n",
     "#plt.grid(False)\n",
     "x=x1\n",
@@ -338,8 +340,11 @@
     "x=dataf[:,0]\n",
     "y=dataf[:,1]\n",
     "z=dataf[:,2]\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('Frequency (a.u.)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()"
+    "plt.colorbar()\n",
+    "plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
    ]
   },
   {
@@ -804,11 +809,6 @@
     "plt.ylim(-0.5,20.5)\n",
     "plt.colorbar()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
