--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -29,11 +29,13 @@
     "  \"font.family\": \"TimeNewroman\"\n",
     "})\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir=\"F:\\\\doc\\\\ori1\\\\twoHCP\\\\orient_by_two_oppposite_HCP_with_different_delay_time_at_5_K\\\\26\\\\\"\n",
+    "\n",
+    "#dir=\"F:\\\\doc\\\\ori1\\\\twoHCP\\\\orient_by_two_oppposite_HCP_with_different_delay_time_at_5_K\\\\26\\\\\"\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\15\\\\5000\\\\'\n",
     "plt.rcParams['figure.figsize'] = (8,6)\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read())\n",
     "import os\n",
     "os.startfile(dir)"
@@ -104,8 +106,8 @@
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.xlim(TimeBegin, TimeEnd)\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')\n",
-    "plt.legend([\"First\", \"Second\", \"Third\"],loc=(0.75,0.7))\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-')\n",
+    "plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
     "plt.show()"
    ]
