--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -36,8 +36,8 @@
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='D:\\\\doc\\\\data\\\\ion1testold\\\\NoAlignment\\\\41\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\t4\\\\'\n",
+    "#dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -56,115 +56,168 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+\"laser.dat\")\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"laser_fre1.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'k-')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"laser_fre2.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'k-')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"laser_fre3.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'k-')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"time_fre-dis3.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "plt.figure(figsize=(24,18))\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "\n",
-    "x=data[:,0]\n",
+    "x1=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
     "plt.subplot(3,3,1)\n",
-    "plt.plot(x,y1,'k-')\n",
+    "plt.title(\"(a)\")\n",
+    "plt.plot(x1,y1,'k-')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "#plt.xlim(19,21)\n",
+    "\n",
     "plt.subplot(3,3,2)\n",
-    "plt.plot(x,y2,'r-')\n",
-    "plt.subplot(3,3,3)\n",
-    "plt.plot(x,y3,'b-')\n",
-    "plt.subplot(3,3,4)\n",
-    "data=np.loadtxt(dir+\"laser_fre1.dat\")\n",
+    "plt.title(\"(b)\")\n",
+    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
+    "plt.xlabel(\"Frequency (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.subplot(3,3,3)\n",
+    "plt.title(\"(c)\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.subplot(3,3,4)\n",
+    "plt.title(\"(d)\")\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.plot(x1,y2,'r-')\n",
+    "\n",
     "plt.subplot(3,3,5)\n",
-    "data=np.loadtxt(dir+\"laser_fre2.dat\")\n",
+    "plt.title(\"(e)\")\n",
+    "data=np.loadtxt(dir+\"FreDis2.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'r-')\n",
+    "plt.xlabel(\"Frequency (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.subplot(3,3,6)\n",
-    "data=np.loadtxt(dir+\"laser_fre3.dat\")\n",
+    "plt.title(\"(f)\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.colorbar()\n",
+    "plt.subplot(3,3,7)\n",
+    "plt.title(\"(g)\")\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.plot(x1,y3,'b-')\n",
+    "\n",
+    "plt.subplot(3,3,8)\n",
+    "plt.title(\"(h)\")\n",
+    "data=np.loadtxt(dir+\"FreDis3.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'b-')\n",
-    "plt.subplot(3,3,7)\n",
-    "data=np.loadtxt(dir+\"time_fre-dis1.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.subplot(3,3,8)\n",
-    "data=np.loadtxt(dir+\"time_fre-dis2.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlabel(\"Frequency (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.subplot(3,3,9)\n",
-    "data=np.loadtxt(dir+\"time_fre-dis3.dat\")\n",
+    "plt.title(\"(i)\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')"
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.colorbar()\n",
+    "plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.colorbar()\n",
+    "plt.savefig(dir+\"TimFreDistTotal.\"+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y,'k-')\n",
+    "plt.xlabel(\"Frequency (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.savefig(dir+\"FreDistTotal.\"+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,9))\n",
+    "titleLoc=\"left\"\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.title(\"(d)\",loc=titleLco)\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.plot(x,y1,'k-')\n",
+    "plt.subplot(2,2,3)\n",
+    "\n",
+    "plt.title(\"(c)\",loc=titleLoc)\n",
+    "plt.plot(x,y3)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.title(\"(b)\",loc=titleLoc)\n",
+    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "data2=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data2[:,1]\n",
+    "plt.xlabel(\"Intensity (arb.units)\") \n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "#plt.xlim(0,5)\n",
+    "plt.ylim(min(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]))\n",
+    "plt.plot(y,x,\"k-\",z,x,\"r--\")\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.title(\"(a)\",loc=titleLoc)\n",
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,100,cmap='jet')\n",
+    "#plt.colorbar()\n",
+    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
