--- a/Python/LaserDistribution.ipynb
+++ b/Python/LaserDistribution.ipynb
@@ -14,7 +14,22 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"sans-serif\",\n",
+    "    \"font.sans-serif\": [\"TimeNewroman\"]})\n",
+    "# for Palatino and other serif fonts use:\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    \"font.serif\": [\"Palatino\"],\n",
+    "})\n",
+    "# It's also possible to use the reduced notation by directly setting font.family:\n",
+    "plt.rcParams.update({\n",
+    "  \"text.usetex\": True,\n",
+    "  \"font.family\": \"TimeNewroman\",\n",
+    "  \"font.size\": 12,\n",
+    "})\n",
     "plt.rcParams['figure.figsize'] = (8,6)\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
@@ -52,8 +67,8 @@
    "source": [
     "plt.figure(figsize=(12,9))\n",
     "\n",
-    "plt.subplot(2,2,1)\n",
-    "plt.title(\"(a)\",loc='right')\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.title(\"(d)\",loc='right')\n",
     "data=np.loadtxt(dir+\"Laserfield.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -61,13 +76,13 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.plot(x,z)\n",
-    "plt.subplot(2,2,2)\n",
-    "plt.title(\"(b)\",loc='right')\n",
+    "plt.subplot(2,2,3)\n",
+    "plt.title(\"(c)\",loc='right')\n",
     "plt.plot(x,y,'--',x,-y,'--')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.subplot(2,2,3)\n",
-    "plt.title(\"(c)\",loc='right')\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.title(\"(b)\",loc='right')\n",
     "data=np.loadtxt(dir+\"laser_fre1.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -75,9 +90,9 @@
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "#plt.xlim(0,5)\n",
     "plt.ylim(min(np.loadtxt(dir+\"TimeFrequencyDistribution.dat\")[:,1]),max(np.loadtxt(dir+\"TimeFrequencyDistribution.dat\")[:,1]))\n",
-    "plt.plot(-y,x)\n",
-    "plt.subplot(2,2,4)\n",
-    "plt.title(\"(d)\",loc='right')\n",
+    "plt.plot(y,x)\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.title(\"(a)\",loc='right')\n",
     "data=np.loadtxt(dir+\"TimeFrequencyDistribution.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -98,20 +113,6 @@
     "data=np.loadtxt(dir+\"laser_fre1.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "plt.xlabel(\"Intensity (arb.units)\") \n",
-    "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "plt.plot(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(\"D:\\\\laserfrequency.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
     "plt.ylabel(\"Intensity (arb.units)\") \n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
     "plt.plot(x,y)"
@@ -120,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -134,12 +135,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
