--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -31,35 +31,42 @@
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"TimeNewroman\"]})\n",
+    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
     "# for Palatino and other serif fonts use:\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,\n",
     "    \"font.family\": \"serif\",\n",
-    "    \"font.serif\": [\"Palatino\"],\n",
+    "    #\"font.serif\": [\"Palatino\"],\n",
+    "    \"font.serif\": [\"Time New Roman\"], \n",
     "})\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"TimeNewroman\",\n",
-    "  \"font.size\": 12,\n",
+    "  \"font.family\": \"Time New Roman\",\n",
+    "  #\"font.size\": 16,\n",
     "})\n",
-    "plt.rcParams['figure.figsize'] = (8,6)\n",
+    "\n",
+    "def cm_to_inch(value):\n",
+    "    return value/2.54\n",
+    "\n",
+    "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(5))\n",
+    "#plt.rcParams['figure.figsize'] =(8,5)#(3.5,2.5)\n",
+    "#plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
-    "#f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
-    "#print(f.read(1500))\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"ps\""
+    "timeUnit=\"fs\""
    ]
   },
   {
@@ -75,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TimeTurn=-20\n",
-    "turnPoint=0\n",
+    "# TimeTurn=-20\n",
+    "# turnPoint=0\n",
     "if os.path.exists(dir+'laser.dat'):\n",
     "    TimeBegin =(min(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
     "    TimeEnd   =(max(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
@@ -122,7 +129,7 @@
     "#y=y1\n",
     "#plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
     "plt.plot(x,y1,'k-')\n",
-    "#plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -204,6 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(cm_to_inch(17),cm_to_inch(10.6)))\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x =data[:,0]\n",
     "y1=data[:,1]\n",
@@ -373,11 +381,11 @@
     "#plt.grid(False)\n",
     "x=x\n",
     "y=y3\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
+    "plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
     "plt.xlabel('$\\\\textit{R}$ (a.u.)')\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.6,0.75))\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.55,0.7))\n",
     "plt.subplot(1,2,2)\n",
     "if os.path.exists(dir+\"Dipole.dat\"):\n",
     "    data=np.loadtxt(dir+\"Dipole.dat\")\n",
@@ -386,11 +394,11 @@
     "\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
+    "plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.95,\"(b)\")\n",
     "plt.xlabel(\"$\\\\textit{R}$  (a.u.)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
-    "plt.legend([\"$\\mu_{X^1\\Sigma^+ - X^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - A^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - X^2\\Sigma^+} $\"],loc=(0.5,0.08))\n",
+    "plt.legend([\"$\\mu_{X^1\\Sigma^+ - X^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - A^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - X^2\\Sigma^+} $\"],loc=(0.4,0.08))\n",
     "plt.tight_layout()\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
@@ -907,6 +915,13 @@
     "ax.set_title(\"A line plot on a polar axis\", va='bottom')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
