The traces of Using

--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -29,30 +29,30 @@
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
     "  \"font.family\": \"Time New Roman\",\n",
-    "  #\"font.size\": 16,\n",
+    "  \"font.size\": 8,\n",
     "})\n",
     "\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(5))\n",
-    "#plt.rcParams['figure.figsize'] =(8,5)#(3.5,2.5)\n",
-    "#plt.rcParams['lines.linewidth'] = 1\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "#dir='D:\\\\dataofpro\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "#dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"jpeg\"\n",
+    "figureType=\"eps\"\n",
     "timeUnit=\"fs\""
    ]
   },
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "titleLoc=\"left\"\n",
-    "plt.figure(figsize=(24,18))\n",
+    "plt.figure(figsize=(12,9))\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -142,6 +142,12 @@
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")\n",
     "plt.colorbar()\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
     "plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)"
    ]
   },
@@ -183,7 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16,12))\n",
+    "plt.figure(figsize=((16/2.54),(13/2)))\n",
+    "#plt.figure(figsize=(8,6))\n",
     "titleLoc=\"left\"\n",
     "plt.subplot(2,2,1)\n",
     "#plt.title(\"(a)\",loc=titleLoc)\n",
@@ -210,7 +217,7 @@
     "\n",
     "plt.ylim(min(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]))\n",
     "plt.plot(y1,x,\"k-\",y2,x,\"r--\")#,y3,x,'b-.')\n",
-    "plt.legend([\"$E_{pump}$\",\"$E_{probe}$\"],loc=(0.7,0.75))\n",
+    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
     "plt.subplot(2,2,3)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x=data[:,0]\n",
@@ -222,7 +229,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--')#,x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.legend([\"$E_{pump}$\",\"$E_{probe}$\"],loc=(0.7,0.75))\n",
+    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
     "plt.subplot(2,2,4)\n",
     "#plt.title(\"(d)\",loc=titleLoc)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -235,8 +242,16 @@
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
     "plt.plot(x,y1,'k-',x,y2,'r-')#,x,y3,'b-',)\n",
-    "plt.legend([\"$E_{pump}$\",\"$E_{probe}$\"],loc=(0.7,0.75))\n",
-    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = '',dpi=figureDPI)"
    ]
   },
   {
