--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -43,22 +43,22 @@
     "plt.rcParams.update({\n",
     "  \"text.usetex\": True,\n",
     "  \"font.family\": \"Time New Roman\",\n",
-    "  #\"font.size\": 16,\n",
+    "  \"font.size\": 8,\n",
     "})\n",
     "\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(5))\n",
-    "#plt.rcParams['figure.figsize'] =(8,5)#(3.5,2.5)\n",
-    "#plt.rcParams['lines.linewidth'] = 1\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "#from mpl_toolkits.mplot3d import Axes3D\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -158,7 +158,7 @@
     "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
     "plt.ylabel(\"Energy (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.8,0.75))\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.65,0.7))\n",
     "#plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
   },
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(cm_to_inch(17),cm_to_inch(10.6)))\n",
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "x =data[:,0]\n",
     "y1=data[:,1]\n",
@@ -226,7 +226,7 @@
     "#ax.set_xlim([-10,100])\n",
     "x=x\n",
     "y=y1\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
+    "plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
     "ax.set_ylabel('Intensity (a.u.)')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "for i in range(2):\n",
@@ -235,17 +235,17 @@
     "        ax.plot(x2,y2,'r-')\n",
     "        x=x2\n",
     "        y=y2\n",
-    "        plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(b)\")\n",
+    "        plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
     "    if i==1:\n",
     "        ax.plot(x2,y3,'b-')\n",
     "        x=x2\n",
     "        y=y3\n",
-    "        plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(c)\")\n",
+    "        plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
     "    ax.set_ylabel('Intensity (a.u.)')\n",
     "    ax.set_xlabel('Time (fs)')\n",
-    "    if i == 0:\n",
-    "        for tick in ax.get_xticklabels():\n",
-    "            tick.set_rotation(55)\n",
+    "    # if i == 0:\n",
+    "    for tick in ax.get_yticklabels():\n",
+    "        tick.set_rotation(55)\n",
     "fig.align_labels()  # same as fig.align_xlabels(); fig.align_ylabels()\n",
     "plt.show()"
    ]
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(24,18))\n",
+    "plt.figure(figsize=(24/2.54,18/2.54))\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
     "\n",
     "\n",
@@ -368,7 +368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
     "plt.subplot(1,2,1)\n",
+    "\n",
     "if os.path.exists(dir+\"pott.dat\"):\n",
     "    data=np.loadtxt(dir+\"Pott.dat\")\n",
     "else:\n",
@@ -458,7 +461,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(12,9))\n",
+    "#plt.figure(figsize=(12,9))\n",
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
     "if os.path.exists(dir+\"vgr_ang.dat\"):\n",
     "    plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"vgr_ang.dat\")\n",
@@ -469,7 +473,7 @@
     "    plt.title(\"(a)\",loc='left')\n",
     "    plt.xlim(TimeBegin, TimeEnd )\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,2)\n",
@@ -481,7 +485,7 @@
     "    plt.title(\"(b)\",loc='left')\n",
     "    plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,3)\n",
@@ -493,7 +497,7 @@
     "    plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,4)\n",
@@ -504,7 +508,8 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    #plt.colorbar(location='top',orientation='horizontal')\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "elif os.path.exists(dir+\"GroAngWave.dat\"):\n",
@@ -517,7 +522,7 @@
     "    plt.title(\"(a)\",loc='left')\n",
     "    plt.xlim(TimeBegin, TimeEnd )\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,2)\n",
@@ -529,7 +534,7 @@
     "    plt.title(\"(b)\",loc='left')\n",
     "    plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,3)\n",
@@ -541,7 +546,7 @@
     "    plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,4)\n",
@@ -552,11 +557,17 @@
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format='%.2f')\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "else :\n",
     "    print(\"No data available\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.22, \n",
+    "                    hspace=0.3)\n",
     "plt.savefig(dir+\"WaveAngDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
    ]
@@ -574,7 +585,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,9))\n",
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "import matplotlib.ticker as ticker\n",
     "if os.path.exists(dir+\"vgr_rad.dat\"):     \n",
     "    plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"vgr_rad.dat\")\n",
@@ -587,6 +599,10 @@
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
+    "    # cb=plt.colorbar(format='%.1e')\n",
+    "    # tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "    # cb.locator=tick_locator\n",
+    "    # cb.update_ticks()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    plt.subplot(2,2,2)\n",
@@ -600,6 +616,10 @@
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
+    "    # cb=plt.colorbar(format='%.1e')\n",
+    "    # tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "    # cb.locator=tick_locator\n",
+    "    # cb.update_ticks()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    plt.subplot(2,2,3)\n",
@@ -613,6 +633,10 @@
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
+    "    # cb=plt.colorbar(format='%.1e')\n",
+    "    # tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "    # cb.locator=tick_locator\n",
+    "    # cb.update_ticks()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    plt.subplot(2,2,4)\n",
@@ -626,6 +650,10 @@
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
+    "    # cb=plt.colorbar(format='%.1e')\n",
+    "    # tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "    # cb.locator=tick_locator\n",
+    "    # cb.update_ticks()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "elif os.path.exists(dir+\"GroRadWave.dat\"):\n",
@@ -683,6 +711,15 @@
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "else:\n",
     "    print(\"No rad-resovled wave data available\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "#fig.subplots_adjust(right=0.9)\n",
+    "# p = add_axes([0.92, 0.12, 0.015, .78 ])#位置[左,下,右,上]\n",
+    "# cb = fig.colorbar(sp4, cax=p)\n",
     "plt.savefig(dir+\"WaveRadDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
    ]
@@ -708,7 +745,7 @@
     "    print(\"No PopulationOfState dataset found.\")\n",
     "plt.xlim(TimeTurn,TimeEnd)\n",
     "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.83,0.79))\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "plt.savefig(dir+\"PopulationOfState.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")"
@@ -727,36 +764,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,9))\n",
-    "plt.subplot(2,1,1)\n",
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "ax1=plt.subplot(2,1,1)\n",
     "DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=DataPop[:,0]\n",
     "y=DataPop[:,1]\n",
     "z=DataPop[:,2]\n",
-    "plt.xlim(TimeBegin,TimeEnd)\n",
-    "plt.ylim(0,5)\n",
-    "plt.title(\"(a)\",loc='left')\n",
-    "plt.tricontourf(x,y,z,cmap='jet')\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "print('nx= ',nx,' ny= ',ny)\n",
+    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "print('x[50]',x[50])\n",
+    "print(x[0])\n",
+    "print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"(a) Ground State\",loc='left')\n",
+    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.ylim(-0.5,5.5)\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$V$')\n",
     "plt.colorbar()\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"Vibrational quantum number v\")\n",
-    "\n",
-    "plt.subplot(2,1,2)\n",
+    "ax2=plt.subplot(2,1,2)\n",
     "DataPop =np.loadtxt(dir+\"p_exc_v.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=DataPop[:,0]\n",
     "y=DataPop[:,1]\n",
     "z=DataPop[:,2]\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
-    "plt.ylim(0,20)\n",
-    "plt.title(\"(b)\",loc='left')\n",
-    "plt.tricontourf(x,y,z)\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "print('nx= ',nx,' ny= ',ny)\n",
+    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "print('x[50]',x[50])\n",
+    "print(x[0])\n",
+    "print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"(b) Excited state\",loc='left')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$V$')\n",
+    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.ylim(-0.5,20.5)\n",
     "plt.colorbar()\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"Vibrational quantum number v\")\n",
-    "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -765,9 +836,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,9))\n",
-    "plt.subplot(2,1,1)\n",
-    "DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "timeP=\"80\"\n",
+    "ax1=plt.subplot(1,2,1)\n",
+    "DataPop =np.loadtxt(dir+\"p_vgr_vj\\\\p_vj_at_pos\"+timeP+\"_fs.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=DataPop[:,0]\n",
     "y=DataPop[:,1]\n",
@@ -787,12 +860,16 @@
     "yMesh=np.linspace(min(y),max(y),ny)\n",
     "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
     "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "plt.ylim(-0.5,5.5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('Vibrational quantum state')\n",
+    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-0.5,19.5)\n",
+    "plt.ylim(-0.5,19.5)\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.title(\"(a) Ground state, $t$ = \"+timeP+\" fs\",loc='left')\n",
     "plt.colorbar()\n",
-    "plt.subplot(2,1,2)\n",
-    "DataPop =np.loadtxt(dir+\"p_exc_v.dat\")\n",
+    "ax2=plt.subplot(1,2,2)\n",
+    "DataPop =np.loadtxt(dir+\"p_exc_vj\\\\p_vj_at_pos\"+timeP+\"_fs.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=DataPop[:,0]\n",
     "y=DataPop[:,1]\n",
@@ -812,10 +889,21 @@
     "yMesh=np.linspace(min(y),max(y),ny)\n",
     "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
     "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('Vibrational quantum state')\n",
-    "plt.ylim(-0.5,20.5)\n",
-    "plt.colorbar()"
+    "ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"(b) Excited state, $t$ = \"+timeP+\" fs\",loc='left')\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.xlim(-0.5,19.5)\n",
+    "plt.ylim(-0.5,19.5)\n",
+    "plt.colorbar()\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"P_VJ\"+timeP+\"fs.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -839,8 +927,8 @@
     "fig, ax1 = plt.subplots()\n",
     "\n",
     "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time (fs)')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm cos} \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "\n",
@@ -870,8 +958,8 @@
     "fig, ax1 = plt.subplots()\n",
     "\n",
     "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time (fs)')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm cos} \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "\n",
@@ -911,7 +999,6 @@
     "ax.set_rticks([0.5, 1, 1.5, 2])  # Less radial ticks\n",
     "ax.set_rlabel_position(-22.5)  # Move radial labels away from plotted line\n",
     "ax.grid(False)\n",
-    "\n",
     "ax.set_title(\"A line plot on a polar axis\", va='bottom')\n",
     "plt.show()"
    ]
