the tares of using

--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -58,7 +58,8 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1400\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\35\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -129,7 +130,7 @@
     "#y=y1\n",
     "#plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
     "plt.plot(x,y1,'k-')\n",
-    "plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "#plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -138,6 +139,28 @@
    "metadata": {},
    "source": [
     "Plot potential energy of electric states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+'InitialEigenvalue.dat'):\n",
+    "    data=np.loadtxt(dir+'InitialEigenvalue.dat')\n",
+    "elif os.path.exists(dir+'eig.dat'):\n",
+    "    data=np.loadtxt(dir+'eig.dat')\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "plt.step(x,y1,x,y2)\n",
+    "plt.xlim(0,127)\n",
+    "plt.xlabel('$|V,J=0\\\\rangle$')\n",
+    "plt.ylabel('Eigenvalue (a.u.)')\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$'],loc=(0.1,0.7))\n",
+    "plt.savefig(dir+\"EigenvalueOfVib.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
    ]
   },
   {
@@ -157,7 +180,9 @@
     "y3=data[:,3]\n",
     "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
     "plt.ylabel(\"Energy (a.u.)\")\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'--')\n",
+    "plt.ylim(-0.05,0.5)\n",
+    "plt.fill_between(x,y3,x,y3+0.2)\n",
     "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.65,0.7))\n",
     "#plt.savefig(dir+\"pott.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
@@ -176,7 +201,7 @@
    "outputs": [],
    "source": [
     "import scipy.ndimage\n",
-    "plt.figure(figsize=(7.5,6))\n",
+    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
     "if os.path.exists(dir+\"wave2d.dat\"):\n",
     "    DataAng =np.loadtxt(dir+\"wave2d.dat\")\n",
     "else:   \n",
@@ -256,103 +281,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(24/2.54,18/2.54))\n",
-    "data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
+    "    plt.figure(figsize=(24/2.54,18/2.54))\n",
+    "    data=np.loadtxt(dir+\"Laser.dat\")\n",
     "\n",
     "\n",
-    "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
+    "    x1=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
     "\n",
-    "plt.subplot(3,3,1)\n",
-    "#plt.grid(False)\n",
-    "x=x1\n",
-    "y=y1\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.xlim(TimeBegin,TimeEnd)\n",
-    "plt.plot(x1,y1,'k-')\n",
+    "    plt.subplot(3,3,1)\n",
+    "    #plt.grid(False)\n",
+    "    x=x1\n",
+    "    y=y1\n",
+    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    plt.plot(x1,y1,'k-')\n",
     "\n",
-    "plt.subplot(3,3,2)\n",
-    "dataf=np.loadtxt(dir+\"FreDis1.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "#plt.grid(False)\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "plt.xlabel('Frequency (a.u.)')\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.plot(x,y,'k-')\n",
+    "    plt.subplot(3,3,2)\n",
+    "    dataf=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    #plt.grid(False)\n",
+    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "    plt.xlabel('Frequency (a.u.)')\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.plot(x,y,'k-')\n",
     "\n",
-    "plt.subplot(3,3,3)\n",
-    "dataf=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "z=dataf[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('Frequency (a.u.)')\n",
+    "    plt.subplot(3,3,3)\n",
+    "    dataf=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    z=dataf[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('Frequency (a.u.)')\n",
     "\n",
-    "plt.subplot(3,3,4)\n",
-    "#plt.grid(False)\n",
-    "#plt.title(\"(b)\",loc=\"left\")\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
-    "plt.plot(x1,y2,'r-')\n",
-    "x=x1\n",
-    "y=y2\n",
-    "plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
-    "plt.subplot(3,3,5)\n",
-    "dataf=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "#plt.grid(False)\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "plt.xlabel('Frequency (a.u.)')\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.plot(x,y,'r-')\n",
+    "    plt.subplot(3,3,4)\n",
+    "    #plt.grid(False)\n",
+    "    #plt.title(\"(b)\",loc=\"left\")\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.plot(x1,y2,'r-')\n",
+    "    x=x1\n",
+    "    y=y2\n",
+    "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
+    "    plt.subplot(3,3,5)\n",
+    "    dataf=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    #plt.grid(False)\n",
+    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "    plt.xlabel('Frequency (a.u.)')\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.plot(x,y,'r-')\n",
     "\n",
-    "plt.subplot(3,3,6)\n",
-    "dataf=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "z=dataf[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('Frequency (a.u.)')\n",
-    "plt.subplot(3,3,7)\n",
-    "#plt.grid(False)\n",
-    "x=x1\n",
-    "y=y3\n",
-    "plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
+    "    plt.subplot(3,3,6)\n",
+    "    dataf=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    z=dataf[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('Frequency (a.u.)')\n",
+    "    plt.subplot(3,3,7)\n",
+    "    #plt.grid(False)\n",
+    "    x=x1\n",
+    "    y=y3\n",
+    "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
     "\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
-    "plt.plot(x1,y3,'b-')\n",
-    "plt.subplot(3,3,8)\n",
-    "dataf=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "#plt.grid(False)\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "plt.xlabel('Frequency (a.u.)')\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
-    "plt.plot(x,y,'b-')\n",
-    "plt.subplot(3,3,9)\n",
-    "dataf=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
-    "x=dataf[:,0]\n",
-    "y=dataf[:,1]\n",
-    "z=dataf[:,2]\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('Frequency (a.u.)')\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.plot(x1,y3,'b-')\n",
+    "    plt.subplot(3,3,8)\n",
+    "    dataf=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    #plt.grid(False)\n",
+    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "    plt.xlabel('Frequency (a.u.)')\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.plot(x,y,'b-')\n",
+    "    plt.subplot(3,3,9)\n",
+    "    dataf=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
+    "    x=dataf[:,0]\n",
+    "    y=dataf[:,1]\n",
+    "    z=dataf[:,2]\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('Frequency (a.u.)')\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar()\n",
+    "    plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
    ]
   },
   {
@@ -764,6 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
     "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
     "ax1=plt.subplot(2,1,1)\n",
     "DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
@@ -818,7 +845,7 @@
     "plt.title(\"(b) Excited state\",loc='left')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$V$')\n",
-    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.xlim(TimeTurn,max(x)-x[0])\n",
     "plt.ylim(-0.5,20.5)\n",
     "plt.colorbar()\n",
     "plt.subplots_adjust(left=0.125,\n",
@@ -828,82 +855,6 @@
     "                    wspace=0.25, \n",
     "                    hspace=0.3)\n",
     "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
-    "from matplotlib.ticker import MaxNLocator\n",
-    "timeP=\"80\"\n",
-    "ax1=plt.subplot(1,2,1)\n",
-    "DataPop =np.loadtxt(dir+\"p_vgr_vj\\\\p_vj_at_pos\"+timeP+\"_fs.dat\")\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataPop[:,0]\n",
-    "y=DataPop[:,1]\n",
-    "z=DataPop[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "for i in range(1,nx):\n",
-    "    for j in range(1,ny):\n",
-    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "print('nx= ',nx,' ny= ',ny)\n",
-    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "print('x[50]',x[50])\n",
-    "print(x[0])\n",
-    "print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "plt.xlim(-0.5,19.5)\n",
-    "plt.ylim(-0.5,19.5)\n",
-    "plt.xlabel('$V$')\n",
-    "plt.ylabel('$J$')\n",
-    "plt.title(\"(a) Ground state, $t$ = \"+timeP+\" fs\",loc='left')\n",
-    "plt.colorbar()\n",
-    "ax2=plt.subplot(1,2,2)\n",
-    "DataPop =np.loadtxt(dir+\"p_exc_vj\\\\p_vj_at_pos\"+timeP+\"_fs.dat\")\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataPop[:,0]\n",
-    "y=DataPop[:,1]\n",
-    "z=DataPop[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "for i in range(1,nx):\n",
-    "    for j in range(1,ny):\n",
-    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "print('nx= ',nx,' ny= ',ny)\n",
-    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "print('x[50]',x[50])\n",
-    "print(x[0])\n",
-    "print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "plt.title(\"(b) Excited state, $t$ = \"+timeP+\" fs\",loc='left')\n",
-    "plt.xlabel('$V$')\n",
-    "plt.ylabel('$J$')\n",
-    "plt.xlim(-0.5,19.5)\n",
-    "plt.ylim(-0.5,19.5)\n",
-    "plt.colorbar()\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.25, \n",
-    "                    hspace=0.2)\n",
-    "plt.savefig(dir+\"P_VJ\"+timeP+\"fs.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -981,7 +932,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
+    "DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataAng[:,0]\n",
+    "y=DataAng[:,1]\n",
+    "z=DataAng[:,2]\n",
+    "# plt.xlim(-5, 5)\n",
+    "# plt.ylim(-5, 5)\n",
+    "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "\n",
+    "#interpolation='spline16'\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"$t$ (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$E$ (a.u.)\")\n",
+    "plt.savefig(dir+\"timeenergyspctra.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.startfile(dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "#timeP=\"20\"\n",
+    "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
+    "print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for ii in range(n):\n",
+    "    s1=dir+\"p_vgr_vj\\\\\"+str(fileList[ii])\n",
+    "    s2=dir+\"p_exc_vj\\\\\"+str(fileList[ii])\n",
+    "    ax1=plt.subplot(1,2,1)\n",
+    "    DataPop =np.loadtxt(s1)\n",
+    "    #plt.style.use('_mpl-gallery-nogrid')\n",
+    "    x=DataPop[:,0]\n",
+    "    y=DataPop[:,1]\n",
+    "    z=DataPop[:,2]\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "    zMesh=np.zeros((ny,nx))\n",
+    "    for i in range(1,nx):\n",
+    "        for j in range(1,ny):\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "    print('nx= ',nx,' ny= ',ny)\n",
+    "    print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "    print('x[50]',x[50])\n",
+    "    print(x[0])\n",
+    "    print(zMesh)\n",
+    "    xMesh=np.linspace(min(x),max(x),nx)\n",
+    "    yMesh=np.linspace(min(y),max(y),ny)\n",
+    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "    ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    plt.xlim(-0.5,19.5)\n",
+    "    plt.ylim(-0.5,19.5)\n",
+    "    plt.xlabel('$V$')\n",
+    "    plt.ylabel('$J$')\n",
+    "    plt.title(\"(a) Ground state, $t$ = \"+fileList[ii][11:13]+\" fs\",loc='left')\n",
+    "    plt.colorbar()\n",
+    "    ax2=plt.subplot(1,2,2)\n",
+    "    DataPop =np.loadtxt(s2)\n",
+    "    #plt.style.use('_mpl-gallery-nogrid')\n",
+    "    x=DataPop[:,0]\n",
+    "    y=DataPop[:,1]\n",
+    "    z=DataPop[:,2]\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "    zMesh=np.zeros((ny,nx))\n",
+    "    for i in range(1,nx):\n",
+    "        for j in range(1,ny):\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "    print('nx= ',nx,' ny= ',ny)\n",
+    "    print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "    print('x[50]',x[50])\n",
+    "    print(x[0])\n",
+    "    print(zMesh)\n",
+    "    xMesh=np.linspace(min(x),max(x),nx)\n",
+    "    yMesh=np.linspace(min(y),max(y),ny)\n",
+    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "    ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    plt.title(\"(b) Excited state, $t$ = \"+fileList[ii][11:13]+\" fs\",loc='left')\n",
+    "    plt.xlabel('$V$')\n",
+    "    plt.ylabel('$J$')\n",
+    "    plt.xlim(-0.5,19.5)\n",
+    "    plt.ylim(-0.5,19.5)\n",
+    "    plt.colorbar()\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.25, \n",
+    "                        hspace=0.2)\n",
+    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "\n",
+    "import  imageio\n",
+    "import os\n",
+    "def compose_gif(image_list,gif_name,myduration):\n",
+    "    frames=[]\n",
+    "    for image_name in image_list:\n",
+    "        frames.append(imageio.imread(image_name))\n",
+    "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
+    "    \n",
+    "    return\n",
+    "    \n",
+    "gif_name = \"P_VJ.gif\"\n",
+    "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
+    "print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"p_vgr_vj\\\\\"+str(fileList[i])\n",
+    "    if s[-5:]==\".jpeg\":\n",
+    "        image_list.append(s)\n",
+    "        \n",
+    "        \n",
+    "print(image_list)\n",
+    "myduration=0.3#eval(input(\"duration: s\"))\n",
+    "compose_gif(image_list,dir+gif_name,myduration)\n",
+    "print(\"Created\")    "
    ]
   },
   {
