the traes of ui=sing

--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -204,7 +204,7 @@
     "#plt.colorbar()\n",
     "plt.subplot(2,2,2)\n",
     "#plt.title(\"(b)\",loc=titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
     "data1=np.loadtxt(dir+\"FreDis2.dat\")\n",
     "data2=np.loadtxt(dir+\"FreDis3.dat\")\n",
     "x=data[:,0]\n",
@@ -214,9 +214,8 @@
     "plt.xlabel(\"Intensity (arb.units)\") \n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "#plt.xlim(0,5)\n",
-    "\n",
-    "plt.ylim(min(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis1.dat\")[:,1]))\n",
-    "plt.plot(y1,x,\"k-\",y2,x,\"r--\")#,y3,x,'b-.')\n",
+    "plt.ylim(min(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(dir+\"TimFreDis4.dat\")[:,1]))\n",
+    "plt.plot(y1,x,\"k-\",y2,x,\"r--\",y3,x,'b-.')\n",
     "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
     "plt.subplot(2,2,3)\n",
     "data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -226,7 +225,7 @@
     "y3=data[:,6]\n",
     "plt.xlim(min(x),max(x))\n",
     "#plt.title(\"(c)\",loc=titleLoc)\n",
-    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--')#,x,y3,'b-.',x,-y3,'b-.')\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
@@ -241,7 +240,7 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-')#,x,y3,'b-',)\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-',)\n",
     "plt.legend([\"pump\",\"probe\"],loc=(0.65,0.75))\n",
     "\n",
     "\n",
