--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -59,7 +59,8 @@
     "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
     "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1400\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\35\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\60\\\\'\n",
+    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\t1\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -489,6 +490,7 @@
     "\n",
     "#plt.figure(figsize=(12,9))\n",
     "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "import matplotlib.ticker as ticker\n",
     "if os.path.exists(dir+\"vgr_ang.dat\"):\n",
     "    plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"vgr_ang.dat\")\n",
@@ -497,9 +499,10 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
-    "    plt.xlim(TimeBegin, TimeEnd )\n",
+    "    plt.xlim(TimeBegin+1, TimeEnd )\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,2)\n",
@@ -509,9 +512,10 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,3)\n",
@@ -520,10 +524,11 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,4)\n",
@@ -533,9 +538,10 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(d)\",loc='left')\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    #plt.colorbar(location='top',orientation='horizontal')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "elif os.path.exists(dir+\"GroAngWave.dat\"):\n",
@@ -546,9 +552,10 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
-    "    plt.xlim(TimeBegin, TimeEnd )\n",
+    "    plt.xlim(TimeBegin+1, TimeEnd )\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,2)\n",
@@ -558,9 +565,10 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,3)\n",
@@ -569,10 +577,11 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "    plt.subplot(2,2,4)\n",
@@ -581,9 +590,10 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
+    "    plt.ylim(min(y),180)\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format='%.2f')\n",
+    "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "else :\n",
@@ -592,7 +602,7 @@
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
     "                    top=0.9, \n",
-    "                    wspace=0.22, \n",
+    "                    wspace=0.3, \n",
     "                    hspace=0.3)\n",
     "plt.savefig(dir+\"WaveAngDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
@@ -621,7 +631,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
-    "    plt.xlim(TimeTurn, TimeEnd )\n",
+    "    plt.xlim(TimeTurn+1, TimeEnd )\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -638,7 +648,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -654,7 +664,7 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -671,7 +681,7 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -690,7 +700,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(a)\",loc='left')\n",
-    "    plt.xlim(TimeTurn, TimeEnd )\n",
+    "    plt.xlim(TimeTurn+1, TimeEnd )\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -703,7 +713,7 @@
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
     "    plt.title(\"(b)\",loc='left')\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
@@ -715,7 +725,7 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.title(\"(c)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -728,7 +738,7 @@
     "    x=DataAng[:,0]\n",
     "    y=DataAng[:,1]\n",
     "    z=DataAng[:,2]\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
+    "    plt.xlim(TimeTurn+1,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.title(\"(d)\",loc='left')\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -845,7 +855,7 @@
     "plt.title(\"(b) Excited state\",loc='left')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$V$')\n",
-    "plt.xlim(TimeTurn,max(x)-x[0])\n",
+    "plt.xlim(x[0]/2,max(x)-x[0])\n",
     "plt.ylim(-0.5,20.5)\n",
     "plt.colorbar()\n",
     "plt.subplots_adjust(left=0.125,\n",
@@ -966,6 +976,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8/2.54,13/2.54))\n",
+    "plt.subplot(2,1,1)\n",
+    "data=np.loadtxt(dir+\"qua_int_ang.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"QuaIntAng.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8/2.54,13/2.54))\n",
+    "data=np.loadtxt(dir+\"qua_int_rad.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet',vmin=0.0,vmax=0.1)\n",
+    "plt.colorbar()\n",
+    "plt.ylim(min(y),11)\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.ylim(min(y),11)\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"QuaIntRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "#timeP=\"20\"\n",
@@ -975,6 +1043,7 @@
     "print(\"Checking image list\")\n",
     "n=len(fileList)\n",
     "for ii in range(n):\n",
+    "    if \n",
     "    s1=dir+\"p_vgr_vj\\\\\"+str(fileList[ii])\n",
     "    s2=dir+\"p_exc_vj\\\\\"+str(fileList[ii])\n",
     "    ax1=plt.subplot(1,2,1)\n",
@@ -1069,6 +1138,114 @@
     "myduration=0.3#eval(input(\"duration: s\"))\n",
     "compose_gif(image_list,dir+gif_name,myduration)\n",
     "print(\"Created\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fileList =os.listdir(dir+\"wave\\\\\")\n",
+    "print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"wave\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "        \n",
+    "        \n",
+    "print(dat_list)\n",
+    "for i in range(n):\n",
+    "    \n",
+    "    data=np.loadtxt(dat_list[i])\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z1=data[:,2]\n",
+    "    z2=data[:,3]\n",
+    "    z3=data[:,4]\n",
+    "    z4=z1+z2+z3\n",
+    "\n",
+    "    plt.figure(figsize=(16/2.54,12.5/2.54))\n",
+    "    \n",
+    "    fig=plt.subplots(2,2)\n",
+    "    #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "    plt.subplot(2,2,1)\n",
+    "    plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "    plt.title('(a)',loc='left')\n",
+    "    plt.xlim(-11,11)\n",
+    "    plt.ylim(-11,11)\n",
+    "    plt.xlabel(\"$R$ (a.u.)\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "    plt.subplot(2,2,2)\n",
+    "    plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "    plt.title('(b)',loc='left')\n",
+    "    plt.xlim(-11,11)\n",
+    "    plt.ylim(-11,11)\n",
+    "    plt.xlabel(\"$R$ (a.u.)\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "    plt.subplot(2,2,3)\n",
+    "    plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "    plt.title('(c)',loc='left')\n",
+    "    plt.colorbar()\n",
+    "    plt.xlim(-11,11)\n",
+    "    plt.ylim(-11,11)\n",
+    "    plt.xlabel(\"$R$ (a.u.)\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.subplot(2,2,4)\n",
+    "    plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
+    "    plt.title('(d)',loc='left')\n",
+    "    plt.xlim(-11,11)\n",
+    "    plt.ylim(-11,11)\n",
+    "    plt.xlabel(\"$R$ (a.u.)\")\n",
+    "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.3, \n",
+    "                        hspace=0.3)\n",
+    "    plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "\n",
+    "    plt.show()\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    plt.subplot(2,2,2)\n",
+    "        im=plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "        plt.xlim(-11,11)\n",
+    "        plt.ylim(-11,11)\n",
+    "        plt.xlabel(\"$R$ (a.u.)\")\n",
+    "        plt.ylabel(\"$R$ (a.u.)\")\n",
+    "        plt.subplot(2,2,3)\n",
+    "        im=plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "\n",
+    "        plt.xlim(-11,11)\n",
+    "        plt.ylim(-11,11)\n",
+    "        plt.xlabel(\"$R$ (a.u.)\")\n",
+    "        plt.ylabel(\"$R$ (a.u.)\")\n",
+    "        \n",
+    "        plt.subplot(2,2,4)\n",
+    "        im=plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
+    "        plt.xlim(-11,11)\n",
+    "        plt.ylim(-11,11)\n",
+    "        plt.xlabel(\"$R$ (a.u.)\")\n",
+    "        plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    \n",
+    "    "
    ]
   },
   {
